tests/baselines/reference/plusOperatorWithBooleanType.errors.txt
tests/cases/conformance/expressions/unaryOperators/plusOperator/plusOperatorWithBooleanType.ts(33,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== tests/cases/conformance/expressions/unaryOperators/plusOperator/plusOperatorWithBooleanType.ts (1 errors) ====
    // + operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsNumber1 = +BOOLEAN;
    
    // boolean type literal
    var ResultIsNumber2 = +true;
    var ResultIsNumber3 = +{ x: true, y: false };
    
    // boolean type expressions
    var ResultIsNumber4 = +objA.a;
    var ResultIsNumber5 = +M.n;
    var ResultIsNumber6 = +foo();
    var ResultIsNumber7 = +A.foo();
    
    // miss assignment operators
    +true;
    +BOOLEAN;
    +foo();
    +true, false;
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    +objA.a;
    +M.n;